--- a/Main/index.html
+++ b/Main/index.html
@@ -22,18 +22,19 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <!-- Brand/Logo -->
-        <div class="logo-left">
-          <img
-            src="../Assets/Images/Logo/Logo-Hashtag-Original-1.png"
-            alt="Logo"
-            class="logo"
-          />
-        </div>
+    <header>
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <!-- Brand/Logo -->
+          <div class="logo-left">
+            <img
+              src="../Assets/Images/Logo/Logo-Hashtag-Original-1.png"
+              alt="Logo"
+              class="logo"
+            />
+          </div>
 
-        <!-- Hamburger Button (Toggler) -->
+          <!-- Hamburger Button (Toggler) -->
 
           <button
             class="navbar-toggler"
@@ -48,35 +49,72 @@
             <!-- ☰ Icon -->
           </button>
 
-
-        <!-- Navbar Links (Collapsible) -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Curso de Excel</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Curso de Power BI</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Curso de Python</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Outros Cursos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Para Empresas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contato</a>
-            </li>
-          </ul>
+          <!-- Navbar Links (Collapsible) -->
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Curso de Excel</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Curso de Power BI</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Curso de Python</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Outros Cursos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Para Empresas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contato</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </header>
+
+    <!-- Main Content -->
+    <main>
+      <!-- Primeira Section -->
+      <section class="secao secao-hero">
+        <div class="container container-hero col-xsm-12 col-sm-12 col-md-12 col-lg-10">
+          <div class="hero-coluna">
+            <h1>
+              Torne-se uma referência no Mercado de Trabalho com a Hashtag
+              Treinamentos
+            </h1>
+            <p>
+              Aprenda com a Hashtag Treinamentos tudo que você precisa saber de
+              Excel, VBA, Power BI, PowerPoint, Python e SQLAprenda com a
+              Hashtag Treinamentos tudo que você precisa saber de Excel, VBA,
+              Power BI, PowerPoint, Python e SQL
+            </p>
+            <div class="hero-button">
+              <a class="botao hero-botao" href="#"
+                >Cursos Hashtag Treinamentos</a
+              >
+            </div>
+          </div>
+          <div class="iframe-cs">
+            <iframe
+              src="https://www.youtube.com/embed/OlOUnhHq5tI"
+              title="Conheça o Site da Hashtag Treinamentos"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+              class="iframe-video"
+            ></iframe>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <!-- Bootstrap JS (Required for dropdown functionality) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
