--- a/Main/index.html
+++ b/Main/index.html
@@ -83,7 +83,7 @@
     <main>
       <!-- Primeira Section -->
       <section class="secao secao-hero">
-        <div class="container container-hero col-xsm-12 col-sm-12 col-md-12 col-lg-10">
+        <div class="container container-hero col-sm-12 col-md-12 col-lg-10">
           <div class="hero-coluna">
             <h1>
               Torne-se uma referência no Mercado de Trabalho com a Hashtag
