Segunda secao, save point

--- a/Main/index.html
+++ b/Main/index.html
@@ -114,6 +114,50 @@
           </div>
         </div>
       </section>
+      <!-- Segunda Section -->
+      <section class="secao secao-treinamentos">
+        <div class="container container-treinamentos col-lg-10">
+          <div class="left-coluna-treinamentos">
+            <img
+              src="../Assets/Images/ct-img/computer-hashtag.webp"
+              alt="Computador-img" class="img-computer"
+            />
+          </div>
+          <div class="right-coluna-treinamentos">
+            <div class="title-train">
+              <img src="../Assets/Images/icons/seta icon.png" alt="Seta azul" />
+              <h2 class="column-h2">Conteudos 100% gratuitos da <br> Hashtag Treinamentos</h2>
+            </div>
+            <div class="row row-cols-1 row-cols-md-3  row-col-lg-10 cards-way">
+              <div class="col-treina">
+                <div class="card h-100 ">
+                  <img src="..." class="card-img-top" alt="..." />
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">
+                      This is a longer card with supporting text below as a
+                      natural lead-in to additional content. This content is a
+                      little bit longer.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col col-treina">
+                <div class="card h-100">
+                  <img src="..." class="card-img-top" alt="..." />
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a short card.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- <div class="card-esquerdo">
+
+            </div> -->
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- Bootstrap JS (Required for dropdown functionality) -->
