--- a/Main/index.html
+++ b/Main/index.html
@@ -120,25 +120,48 @@
           <div class="left-coluna-treinamentos">
             <img
               src="../Assets/Images/ct-img/computer-hashtag.webp"
-              alt="Computador-img" class="img-computer"
+              alt="Computador-img"
+              class="img-computer"
             />
           </div>
           <div class="right-coluna-treinamentos">
             <div class="title-train">
               <img src="../Assets/Images/icons/seta icon.png" alt="Seta azul" />
-              <h2 class="column-h2">Conteudos 100% gratuitos da <br> Hashtag Treinamentos</h2>
+              <h2 class="column-h2">
+                Conteudos 100% gratuitos da <br />
+                Hashtag Treinamentos
+              </h2>
             </div>
-            <div class="row row-cols-1 row-cols-md-3  row-col-lg-10 cards-way">
+            <div class="row row-cols-1 row-cols-md-3 row-col-lg-10 cards-way">
               <div class="col-treina">
-                <div class="card h-100 ">
-                  <img src="..." class="card-img-top" alt="..." />
+                <div class="card h-100">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">
-                      This is a longer card with supporting text below as a
-                      natural lead-in to additional content. This content is a
-                      little bit longer.
-                    </p>
+                    <h5 class="card-title">Treinamentos</h5>
+                    <div>
+                      <img src="#" alt="" />
+                      <img src="#" alt="" />
+                      <img src="#" alt="" />
+                      <img src="#" alt="" />
+                    </div>
+                    <div>
+                      <ul>
+                        <li>
+                          <a href="#">Instagram</a>
+                        </li>
+                        <li>
+                          <a href="#">Youtbe</a>
+                        </li>
+                        <li>
+                          <a href="#">Instagram</a>
+                        </li>
+                        <li>
+                          <a href="#">Instagram</a>
+                        </li>
+                        <li>
+                          <a href="#">Instagram</a>
+                        </li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </div>
