Sec gero update

--- a/Main/index.html
+++ b/Main/index.html
@@ -116,68 +116,170 @@
       </section>
       <!-- Segunda Section -->
       <section class="secao secao-treinamentos">
-        <div class="container container-treinamentos col-lg-10">
-          <div class="left-coluna-treinamentos">
+        <div class="container sec-hero-container col-lg-12">
+          <div class="left-content col-lg-6">
             <img
+              class="content-img"
               src="../Assets/Images/ct-img/computer-hashtag.webp"
-              alt="Computador-img"
-              class="img-computer"
+              alt=""
             />
           </div>
-          <div class="right-coluna-treinamentos">
-            <div class="title-train">
-              <img src="../Assets/Images/icons/seta icon.png" alt="Seta azul" />
-              <h2 class="column-h2">
-                Conteudos 100% gratuitos da <br />
+          <div class="right-content col-lg-6">
+            <div class="top-content">
+              <img
+                class="top-content-img"
+                src="../Assets/Images/icons/seta icon.png"
+                alt=""
+              />
+              <h2>
+                Conteúdos <span class="gratuitos">100% gratuitos</span> da
                 Hashtag Treinamentos
               </h2>
             </div>
-            <div class="row row-cols-1 row-cols-md-3 row-col-lg-10 cards-way">
-              <div class="col-treina">
-                <div class="card h-100">
-                  <div class="card-body">
-                    <h5 class="card-title">Treinamentos</h5>
-                    <div>
-                      <img src="#" alt="" />
-                      <img src="#" alt="" />
-                      <img src="#" alt="" />
-                      <img src="#" alt="" />
-                    </div>
-                    <div>
-                      <ul>
-                        <li>
-                          <a href="#">Instagram</a>
-                        </li>
-                        <li>
-                          <a href="#">Youtbe</a>
-                        </li>
-                        <li>
-                          <a href="#">Instagram</a>
-                        </li>
-                        <li>
-                          <a href="#">Instagram</a>
-                        </li>
-                        <li>
-                          <a href="#">Instagram</a>
-                        </li>
-                      </ul>
-                    </div>
+            <div class="bottom-content col-lg-12">
+              <div class="card-content col-lg-5">
+                <div class="card-content-title">
+                  <h1 class="card-title-h1">Treinamentos</h1>
+                </div>
+                <div class="card-content-btn-row">
+                  <div class="content-btn">
+                    <a class="circulo-logo-cd" href="#">
+                      <img
+                        class="btn-cd-img"
+                        src="../Assets/Images/icons/excell.png"
+                        alt=""
+                      />
+                    </a>
+                    <a class="circulo-logo-cd" href="#">
+                      <img
+                        class="btn-cd-img"
+                        src="../Assets/Images/icons/excell.png"
+                        alt=""
+                      />
+                    </a>
+                    <a class="circulo-logo-cd" href="#">
+                      <img
+                        class="btn-cd-img"
+                        src="../Assets/Images/icons/excell.png"
+                        alt=""
+                      />
+                    </a>
+                    <a class="circulo-logo-cd" href="#">
+                      <img
+                        class="btn-cd-img"
+                        src="../Assets/Images/icons/excell.png"
+                        alt=""
+                      />
+                    </a>
                   </div>
                 </div>
+                <div class="content-media-col">
+                    <a class="social-btn" href="#">
+                      <img
+                        class="social-icons-img"
+                        src="../Assets/Images/social-icons/youtube-1.png"
+                        alt=""
+                      />
+                      <h3 class="card-content-h3">Youtube</h3>
+                    </a>
+                    <a class="social-btn" href="#">
+                      <img
+                        class="social-icons-img"
+                        src="../Assets/Images/social-icons/youtube-1.png"
+                        alt=""
+                      />
+                      <h3 class="card-content-h3">Youtube</h3>
+                    </a>
+                    <a class="social-btn" href="#">
+                      <img
+                        class="social-icons-img"
+                        src="../Assets/Images/social-icons/youtube-1.png"
+                        alt=""
+                      />
+                      <h3 class="card-content-h3">Youtube</h3>
+                    </a>
+                    <a class="social-btn" href="#">
+                      <img
+                        class="social-icons-img"
+                        src="../Assets/Images/social-icons/youtube-1.png"
+                        alt=""
+                      />
+                      <h3 class="card-content-h3">Youtube</h3>
+                    </a>
+                </div>
               </div>
-              <div class="col col-treina">
-                <div class="card h-100">
-                  <img src="..." class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a short card.</p>
+              <div class="card-content col-lg-5">
+                <div class="card-content-title">
+                  <h1 class="card-title-h1">Treinamentos</h1>
+                </div>
+                <div class="card-content-btn-row">
+                  <div class="content-btn">
+                    <a class="circulo-logo-cd" href="#">
+                      <img
+                        class="btn-cd-img"
+                        src="../Assets/Images/icons/excell.png"
+                        alt=""
+                      />
+                    </a>
+                    <a class="circulo-logo-cd" href="#">
+                      <img
+                        class="btn-cd-img"
+                        src="../Assets/Images/icons/excell.png"
+                        alt=""
+                      />
+                    </a>
+                    <a class="circulo-logo-cd" href="#">
+                      <img
+                        class="btn-cd-img"
+                        src="../Assets/Images/icons/excell.png"
+                        alt=""
+                      />
+                    </a>
+                    <a class="circulo-logo-cd" href="#">
+                      <img
+                        class="btn-cd-img"
+                        src="../Assets/Images/icons/excell.png"
+                        alt=""
+                      />
+                    </a>
                   </div>
+                </div>
+                <div class="content-media-col">
+                    <a class="social-btn" href="#">
+                      <img
+                        class="social-icons-img"
+                        src="../Assets/Images/social-icons/youtube-1.png"
+                        alt=""
+                      />
+                      <h3 class="card-content-h3">Youtube</h3>
+                    </a>
+                    <a class="social-btn" href="#">
+                      <img
+                        class="social-icons-img"
+                        src="../Assets/Images/social-icons/youtube-1.png"
+                        alt=""
+                      />
+                      <h3 class="card-content-h3">Youtube</h3>
+                    </a>
+                    <a class="social-btn" href="#">
+                      <img
+                        class="social-icons-img"
+                        src="../Assets/Images/social-icons/youtube-1.png"
+                        alt=""
+                      />
+                      <h3 class="card-content-h3">Youtube</h3>
+                    </a>
+                    <a class="social-btn" href="#">
+                      <img
+                        class="social-icons-img"
+                        src="../Assets/Images/social-icons/youtube-1.png"
+                        alt=""
+                      />
+                      <h3 class="card-content-h3">Youtube</h3>
+                    </a>
                 </div>
               </div>
             </div>
-            <!-- <div class="card-esquerdo">
-
-            </div> -->
           </div>
         </div>
       </section>
