--- a/Main/index.html
+++ b/Main/index.html
@@ -174,43 +174,13 @@
                   </div>
                 </div>
                 <div class="content-media-col">
-                    <a class="social-btn" href="#">
-                      <img
-                        class="social-icons-img"
-                        src="../Assets/Images/social-icons/youtube-1.png"
-                        alt=""
-                      />
-                      <h3 class="card-content-h3">Youtube</h3>
-                    </a>
-                    <a class="social-btn" href="#">
-                      <img
-                        class="social-icons-img"
-                        src="../Assets/Images/social-icons/youtube-1.png"
-                        alt=""
-                      />
-                      <h3 class="card-content-h3">Youtube</h3>
-                    </a>
-                    <a class="social-btn" href="#">
-                      <img
-                        class="social-icons-img"
-                        src="../Assets/Images/social-icons/youtube-1.png"
-                        alt=""
-                      />
-                      <h3 class="card-content-h3">Youtube</h3>
-                    </a>
-                    <a class="social-btn" href="#">
-                      <img
-                        class="social-icons-img"
-                        src="../Assets/Images/social-icons/youtube-1.png"
-                        alt=""
-                      />
-                      <h3 class="card-content-h3">Youtube</h3>
-                    </a>
+                    <ul>
+                    </ul>
                 </div>
               </div>
-              <div class="card-content col-lg-5">
+              <!-- <div class="card-content col-lg-5">
                 <div class="card-content-title">
-                  <h1 class="card-title-h1">Treinamentos</h1>
+                  <h1 class="card-title-h1">Programação</h1>
                 </div>
                 <div class="card-content-btn-row">
                   <div class="content-btn">
@@ -228,30 +198,17 @@
                         alt=""
                       />
                     </a>
-                    <a class="circulo-logo-cd" href="#">
-                      <img
-                        class="btn-cd-img"
-                        src="../Assets/Images/icons/excell.png"
-                        alt=""
-                      />
-                    </a>
-                    <a class="circulo-logo-cd" href="#">
-                      <img
-                        class="btn-cd-img"
-                        src="../Assets/Images/icons/excell.png"
-                        alt=""
-                      />
-                    </a>
                   </div>
                 </div>
                 <div class="content-media-col">
+
                     <a class="social-btn" href="#">
                       <img
                         class="social-icons-img"
                         src="../Assets/Images/social-icons/youtube-1.png"
                         alt=""
                       />
-                      <h3 class="card-content-h3">Youtube</h3>
+                      <h3 class="card-content-h3">Youstube</h3>
                     </a>
                     <a class="social-btn" href="#">
                       <img
@@ -278,7 +235,7 @@
                       <h3 class="card-content-h3">Youtube</h3>
                     </a>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
