--- a/Main/index.html
+++ b/Main/index.html
@@ -141,7 +141,39 @@
                 <div class="card-content-title">
                   <h1 class="card-title-h1">Treinamentos</h1>
                 </div>
-                <div class="card-content-btn-row">
+                
+                    <div class="content-btn col-md-12 col-lg-12">
+                      <a class="circulo-logo-cd" href="#">
+                        <img
+                          class="btn-cd-img"
+                          src="../Assets/Images/icons/excell.png"
+                          alt=""
+                        />
+                      </a>
+                      <a class="circulo-logo-cd" href="#">
+                        <img
+                          class="btn-cd-img"
+                          src="../Assets/Images/icons/excell.png"
+                          alt=""
+                        />
+                      </a>
+                      <a class="circulo-logo-cd" href="#">
+                        <img
+                          class="btn-cd-img"
+                          src="../Assets/Images/icons/excell.png"
+                          alt=""
+                        />
+                      </a>
+                      <a class="circulo-logo-cd" href="#">
+                        <img
+                          class="btn-cd-img"
+                          src="../Assets/Images/icons/excell.png"
+                          alt=""
+                        />
+                      </a>
+                    </div>
+                  
+                <!-- <div class="card-content-btn-row">
                   <div class="content-btn">
                     <a class="circulo-logo-cd" href="#">
                       <img
@@ -172,7 +204,7 @@
                       />
                     </a>
                   </div>
-                </div>
+                </div> -->
                 <div class="content-media-col">
                     <ul>
                     </ul>
